# project-solution-finder-ultimate-backend

./: .gitignore  2.json  CMakeLists.txt  README.md  database_req.cpp  database_req.h  main.cpp  map_param_trad.cpp  map_param_trad.h  map_params.json  requirements.txt  restapp.cpp  restapp.h  solutions.json  useful_request.sql
model/: balance_sheet.py  model.py  requirements.txt  semantic_search.py  tblcoutrex.csv  tblgainrex.csv  tblmonnaie.csv  tblrex.csv  textSolModel.csv
